# vetrr

./: .gitignore  .travis.yml  README.md  conf.py  index.rst  setup.cfg  setup.py
.pytest_cache/v/cache/: nodeids
docs/nb/: Untitled.ipynb
vetrr/: vet_redrock.py
vetrr/scripts/: auto_vet_rr.py  vet_rr.py
vetrr/tests/: test_vetrr_gui.py
vetrr/tests/files/: J1059+1441-08_coadd.yaml  J105935.22+144406.3.fits  J105935.70+144227.3.fits  J105935.93+143958.6.fits  J105938.62+144054.8.fits  J105939.58+143911.7.fits  J105940.55+144041.7.fits  J105940.72+144143.0.fits  J105941.00+143920.4.fits  J105941.03+144200.2.fits  J105941.11+144010.7.fits  J105941.17+144154.9.fits  J105941.52+144354.1.fits  J105941.59+144017.5.fits  J105942.10+144220.8.fits  J105942.32+144256.0.fits  J105942.40+144036.2.fits  J105942.93+144114.4.fits  J105943.09+143926.0.fits  J105943.74+144123.4.fits  J105943.87+144148.8.fits  J105944.99+144215.2.fits  J105945.19+144339.7.fits  J105945.20+144004.7.fits  J105946.10+143905.7.fits  J105946.25+144325.5.fits  J105946.58+144049.3.fits  J105947.33+144131.8.fits  J105947.62+144239.5.fits  J105947.63+143942.9.fits  J105947.87+144347.6.fits  J105948.08+144311.4.fits  J105948.51+144137.6.fits  J105948.87+144400.9.fits  J105949.16+144232.7.fits  J105949.17+144209.3.fits  J105949.27+144303.4.fits  J105949.46+144027.8.fits  J105949.54+144246.0.fits  J105950.01+144103.6.fits  (+8 more)
