[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = vetrr
description = visual vetting of RedRock redshift guesses
long_description = This program starts a GUI that is useful in manually checking the output of redshift guesses from RedRock. It allows the user to input spectra reduced using cgmsquared.
author = Matthew Wilde
author_email = mattcwilde@gmail.com
license = GNU GPL v3+
url = http://github.com/mattcwilde/vetrr
edit_on_github = False
github_project = mattcwilde/vetrr
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.0.8
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 2.7

[entry_points]

astropy-package-template-example = packagename.example_mod:main
